[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/HealthUIBoss.gd" type="Script" id=1]
[ext_resource path="res://UI/HeartUIEmpty.png" type="Texture" id=2]
[ext_resource path="res://UI/HeartUIFull.png" type="Texture" id=3]
[ext_resource path="res://Enemies/BossStats.tscn" type="PackedScene" id=4]

[node name="HealthUIBoss" type="Control"]
margin_right = 61.109
margin_bottom = 11.0
script = ExtResource( 1 )

[node name="BossStats" parent="." instance=ExtResource( 4 )]
max_health = 10

[node name="HeartUIEmpty" type="TextureRect" parent="."]
margin_right = 59.0
margin_bottom = 11.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="HeartUIFull" type="TextureRect" parent="."]
margin_right = 59.0
margin_bottom = 11.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 2
